[project]
name = "mcp-browser-renderer"
version = "0.1.0"
description = "MCP server for rendering HTML content in browser"
dependencies = [
    "mcp",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_browser_renderer"]

[project.scripts]
mcp-browser-renderer = "mcp_browser_renderer.server:main"

[tool.hatch.build]
only-packages = true
